<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/gradient_green"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputCategoryLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editTextCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:inputType="text"
                android:focusable="false"
                android:hint="@string/select_category"
                android:textColorHint="@color/gray"
                android:textColor="@color/gray"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputCompanyLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/textInputCategoryLayout">

            <EditText
                android:id="@+id/editTextCompany"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:inputType="text"
                android:hint="@string/select_company"
                android:textColorHint="@color/gray"
                android:textColor="@color/gray"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputProductLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/textInputCompanyLayout">

            <EditText
                android:id="@+id/editTextProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:inputType="text"
                android:hint="@string/enter_product_name"
                android:textColorHint="@color/gray"
                android:textColor="@color/gray"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/buttonAddProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textInputProductLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/btn_add"
            android:textColor="@color/gray"
            android:background="@drawable/button_login_background"/>

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>