<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white_color"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--<com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline34"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />-->


    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.MapFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline34"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="5dp"
        android:background="@drawable/button_login_background"
        />

    <android.support.constraint.Guideline
        android:id="@+id/guideline34"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline44"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5295082" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline45"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.62" />

    <Button
        android:id="@+id/buttonUploadBill"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:background="@drawable/dialog_button"
        android:text="@string/upload_bill"
        android:textColor="@drawable/button_selector"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline45"
        app:layout_constraintEnd_toStartOf="@+id/buttonAppoint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline44" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline46"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="192dp" />

    <Button
        android:id="@+id/buttonAppoint"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/appoint"
        android:textColor="@drawable/button_selector"
        android:textStyle="bold"
        android:layout_margin="5dp"
        android:background="@drawable/dialog_button"
        app:layout_constraintBottom_toTopOf="@+id/guideline45"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline46"
        app:layout_constraintTop_toTopOf="@+id/guideline44" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline47"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.64262295" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline48"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7409836" />

    <Button
        android:id="@+id/buttonProductDetails"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/product_details"
        android:textColor="@drawable/button_selector"
        android:textStyle="bold"
        android:layout_margin="5dp"
        android:background="@drawable/dialog_button"
        app:layout_constraintBottom_toTopOf="@+id/guideline48"
        app:layout_constraintEnd_toStartOf="@+id/guideline46"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline47" />

    <Button
        android:id="@+id/buttonChat"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/chat"
        android:textColor="@drawable/button_selector"
        android:textStyle="bold"
        android:layout_margin="5dp"
        android:background="@drawable/dialog_button"
        app:layout_constraintBottom_toTopOf="@+id/guideline48"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline46"
        app:layout_constraintTop_toTopOf="@+id/guideline47" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline49"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="146dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.86" />

    <Button
        android:id="@+id/buttonCall"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/call"
        android:textColor="@drawable/button_selector"
        android:textStyle="bold"
        android:layout_margin="5dp"
        android:background="@drawable/dialog_button"
        app:layout_constraintBottom_toTopOf="@+id/guideline50"
        app:layout_constraintEnd_toStartOf="@+id/guideline46"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline49" />


</android.support.constraint.ConstraintLayout>